--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -1,17 +1,31 @@
 body{
-    background-color: azure;
+    background-color: #E9ECEF;
+}
+.navbar{
+    background-color: black;
+    color: #E9ECEF;
+}
+#neptun{
+    color: goldenrod;
+}
+.topicTable{
+    width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+}
+.topicButton{
+    width: 100%;
 }
 
-.Elfogadva{
-    color: forestgreen;
-    font-weight: bolder;
-}
-
-#request{
-    color: #007bff;
-    font-weight: bolder;
-
-}
-#requestResponse{
-    color: forestgreen;
+.topicDescription{
+    padding: 2% 2% 2% 2%;
+    width: 50%;
+    background-color: cornflowerblue;
+    text-align: center;
+    opacity: 0.5;
+    color: white;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 15px;
+    margin-top: 5%;
 }
