--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -6,32 +6,37 @@
     width: 30%;
 }
 
+#successLogOut{
+    text-align: center;
+    color: forestgreen;
+}
 .container{
-    margin-top: 10%;
     width: 90%;
     height: auto;
     overflow: auto;
 }
 .container img{
+    display: block;
     max-height: 100%;
     max-width: 100%;
+    margin-left: auto;
+    margin-right: auto;
 }
-.left{
-    width: 30%;
-    padding-right: 10%;
-    float: left;
-}
-.right{
-    overflow: auto;
-    width: 30%;
-    padding-left: 10%;
-    float: right;
-}
-.center{
+/*.left{
     margin-top: 2%;
     width: 15%;
-    float: right;
+    float: left;
     margin-right: 12.5%;
+}
+.right{
+    width: 20%;
+    padding-top: 3%;
+    float: right;
+}*/
+.center{
+    width: 50%;
+    margin: auto;
+
 }
 
 
