--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -11,21 +11,25 @@
     overflow: auto;
 }
 .container img{
+    display: block;
     max-height: 100%;
     max-width: 100%;
+    margin-left: auto;
+    margin-right: auto;
 }
-.left{
-    width: 35%;
+/*.left{
+    margin-top: 2%;
+    width: 15%;
     float: left;
+    margin-right: 12.5%;
 }
 .right{
-    overflow: auto;
-    width: 30%;
+    width: 20%;
     padding-top: 3%;
     float: right;
-}
-.msg{
-    margin-top: 5%;
-    float: right;
-    width: 15%;
+}*/
+.center{
+    width: 50%;
+    margin: auto;
+
 }
