--- a/src/main/resources/templates/consultantlogin.html
+++ b/src/main/resources/templates/consultantlogin.html
@@ -16,12 +16,12 @@
 <div>
     <div class = "jumbotron jumbotron-fluid">
         <div>
-            <h1 class="welcomeText"><strong>Jelentkezz Be!</strong></h1></br>
+            <h1 class="welcomeText"><strong>Konzulens bejelentkezés!</strong></h1></br>
         </div>
 
         <div class = "d-flex justify-content-center p-3 text-white">
             <div>
-            <form name="loginform" class="form-group" th:action="@{/login}" action="login" method="post">
+            <form name="loginform" class="form-group" th:action="@{/consultantlogin}" action="/consultantlogin" method="post">
                 <div class="p-2 bg-dark">
                     <label>Felhasználónév</label><input class="form-control" type="text" required  name="username" placeholder="Username" />
                 </div>
@@ -32,6 +32,7 @@
                     <div>
                         <button class="btn btn-success" name="login" type="submit">Bejelentkezés</button>
                         <a href="#"><button type="button" class="btn btn-info" name="forgotpassword">Elfelejtett jelszó</button></a>
+                        <a href="/"><button type="button" class="btn btn-info" name="forgotpassword">Vissza</button></a>
                     </div>
                     <div>
 
@@ -46,7 +47,7 @@
                         </div>
                         <div id="successLogOut" th:if="${param.logout}">
                             <p>
-                                <span>Sikeresen kijelentkeztél</span>
+                                <span>Sikeres kijelentkezés</span>
                             </p>
                         </div>
                     </div>
@@ -57,15 +58,17 @@
 
     </div>
     <div class="container">
-        <div class="left">
-            <img th:src="@{/img/robot1.png}" src="" id="robot">
+<!--        <div class="left">
+            <img th:src="@{/img/document.svg}" src="">
+        </div>-->
+        <div class="center">
+            <img th:src="@{/img/me_logo.png}" src="">
         </div>
-        <div class="msg">
-            <img th:src="@{/img/calendar.svg}" src="" id="calendar">
-        </div>
+<!--
         <div class="right">
-            <img th:src="@{/img/girl2.svg}" src="" id="girl2">
+            <img th:src="@{/img/greenkey.svg}" src="">
         </div>
+-->
 
     </div>
 
