--- a/src/main/resources/templates/consultant/home.html
+++ b/src/main/resources/templates/consultant/home.html
@@ -25,30 +25,31 @@
 </head>
 <body>
 <div>
-  <!--  <nav class="navbar navbar-expand-sm navbar-dark">
+ <nav class="navbar navbar-expand-sm navbar-dark">
         <div class="container-fluid">
             <a th:href="@{/consultanthome}" class="navbar-brand font-weight-bolder"><strong>THESISMGR: </strong><span id="neptun" sec:authentication="principal.username"></span></a>
             <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link" href="#">Témáim</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Összes téma</a></li>
-                <li class="nav-item"><a class="nav-link" href="/createtopic">Téma kiírás</a></li>
+                <li class="nav-item"><a class="nav-link" th:href="@{/consultant/createtopic}" href="/consultant/createtopic">Téma kiírás</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown"><a class=" btn dropdown-toggle nav-link" id="dropdown" data-toggle="dropdown">Személyes</a>
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="#">Adatok</a>
-                        <a class="dropdown-item" href="/consultant_logout">Kijelentkezés</a>
+                        <a class="dropdown-item" th:href="@{/logout}" href="/logout">Kijelentkezés</a>
                     </div>
                 </li>
             </ul>
         </div>
     </nav>
 </div>
-
+<!--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
 <hr>
-<div id="request" class="d-flex justify-content-center">
+<div class="d-flex justify-content-center">
     <h3>Kiírt témáim</h3>
 </div>
+
 <div>
     <table class="table table-hover topicTable">
         <thead>
@@ -70,28 +71,12 @@
                 <td><button class="btn btn-danger topicButton">Törlés</button></td>
 
             </tr>
-&lt;!&ndash;
-
-                <td th:class="${request.getStatus()}" th:text="${request.getStatus()}"></td>
-                <div sec:authorize="hasRole('ROLE_ADMIN')">
-                    <td>
-                        <form th:action="@{/request/response}" method="post">
-                            <input type="hidden" name="requestId" th:value="${request.getId()}">
-                            <input class="btn btn-danger" type="submit" name="action" th:value="Elutasítás">
-                            <input class="btn btn-success" type="submit" name="action" th:value="Elfogadás">
-                        </form>
-                    </td>
-                    <td th:text="${request.getManychat_id()}"></td>
-                </div>
-                &ndash;&gt;
-
         </th:block>
         </tbody>
     </table>
-
-    &lt;!&ndash;<div class="topicDescription" th:text="${allTopic[${topicid}].getDescription()}"></div>&ndash;&gt;
     <div class="topicDescription" th:text="${allTopic[2].getDescription()}"></div>
+</div>
 
-</div>-->
+<!--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
 </body>
 </html>
