--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -27,7 +27,7 @@
 
         <div class = "d-flex justify-content-center p-3 text-white">
             <div>
-            <form name="loginform" class="form-group" th:action="@{/consultantlogin}" action="/consultantlogin" method="post">
+            <form name="loginform" class="form-group" th:action="@{/login}" action="/login" method="post">
                 <div class="p-2 bg-dark">
                     <label>Felhasználónév</label><input class="form-control" type="text" required  name="username" placeholder="Username" />
                 </div>
