--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -13,9 +13,6 @@ body{
     margin-left: auto;
     margin-right: auto;
 }
-.topicButton{
-    width: 100%;
-}
 
 .topicDescription{
     padding: 2% 2% 2% 2%;
@@ -28,4 +25,29 @@ body{
     margin-right: auto;
     border-radius: 15px;
     margin-top: 5%;
+}
+
+.createForm{
+    width: 60%;
+    margin: 10% auto auto auto;
+    background-color: black;
+    color: #E9ECEF;
+    border-radius: 30px;
+}
+
+.insertButton{
+    margin-right: auto;
+    margin-left: auto;
+    width: 30%;
+    padding-bottom: 2%;
+    padding-top: 1.5%;
+}
+
+.btn{
+    width: 100%;
+}
+
+.message{
+    color: goldenrod;
+    font-weight: bold;
 }
