--- a/src/main/resources/templates/consultant/alltopic.html
+++ b/src/main/resources/templates/consultant/alltopic.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security" xmlns:tdth="http://www.w3.org/1999/html">
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head>
-    <title>Témavezetői oldal</title>
+    <title>Minden Téma</title>
     <meta charset="utf-8" />
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -25,7 +25,7 @@
 </head>
 <body>
 <div>
- <nav class="navbar navbar-expand-sm navbar-dark">
+    <nav class="navbar navbar-expand-sm navbar-dark">
         <div class="container-fluid">
             <a th:href="@{/home}" class="navbar-brand font-weight-bolder"><strong>THESISMGR: </strong><span id="neptun" sec:authentication="principal.username"></span></a>
             <ul class="navbar-nav">
@@ -54,28 +54,18 @@
 <div>
     <table class="table table-hover topicTable">
         <thead>
-            <tr>
-                <th>Téma címe</th>
-                <th>Státusz</th>
-                <th></th>
-                <th></th>
-                <th></th>
-            </tr>
+        <tr>
+            <th>Téma címe</th>
+            <th>Státusz</th>
+            <th></th>
+        </tr>
         </thead>
         <tbody>
-      <th:block th:each="topic: ${allTopic}">
+        <th:block th:each="topic: ${topics}">
             <tr>
                 <td th:text="${topic.getName()}"></td>
-                <td id="status" th:text="${topic.getStatus()}"></td>
-                <td><a th:href="@{/choosetopic(topicid=(${topic.topicid}))}"><button  class="btn btn-primary">Részletek</button></a></td>
-                <td><a th:href="@{/updatetopic(topicid=(${topic.topicid}))}"><button class="btn btn-info">Módosítás</button></a></td>
-                <td>
-                    <form th:action="@{/deletetopic}" method="post">
-                        <input name="topicid" type="hidden" th:value="${topic.topicid}">
-                        <button  class="btn btn-danger topicButton" type="submit" onclick="return confirm('Biztosan törölni szeretnéd?')">Törlés</button>
-                    </form>
-
-                </td>
+                <td>STÁTUSZ</td>
+                <td><a th:href="@{/choosetopicall(topicid=(${topic.topicid}))}"><button  class="btn btn-primary">Részletek</button></a></td>
             </tr>
         </th:block>
         </tbody>
