--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -51,3 +51,9 @@ body{
     color: goldenrod;
     font-weight: bold;
 }
+.newStep{
+    display: block;
+    width: 15%;
+    margin-right: auto;
+    margin-left: auto;
+}
