--- a/src/main/resources/templates/consultant/home.html
+++ b/src/main/resources/templates/consultant/home.html
@@ -29,9 +29,9 @@
         <div class="container-fluid">
             <a th:href="@{/home}" class="navbar-brand font-weight-bolder"><strong>THESISMGR: </strong><span id="neptun" sec:authentication="principal.username"></span></a>
             <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" th:href="@{/home}">Témáim</a></li>
-                <li class="nav-item"><a class="nav-link" th:href="@{/alltopic}">Összes téma</a></li>
-                <li class="nav-item"><a class="nav-link" th:href="@{/createtopic}" href="/consultant/createtopic">Téma kiírás</a></li>
+                <li class="nav-item"><a class="nav-link" th:href="@{/consultant/home}">Témáim</a></li>
+                <li class="nav-item"><a class="nav-link" th:href="@{/consultant/alltopic}">Összes téma</a></li>
+                <li class="nav-item"><a class="nav-link" th:href="@{/consultant/createtopic}" href="/consultant/createtopic">Téma kiírás</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown"><a class=" btn dropdown-toggle nav-link" id="dropdown" data-toggle="dropdown">Személyes</a>
@@ -49,7 +49,7 @@
 <div class="d-flex justify-content-center">
     <h3>Kiírt témáim</h3>
 </div>
-<div class="d-flex justify-content-center message" th:text="${message}"></div>
+<div class="d-flex justify-content-center message" th:text="${topicUpdateMsg}"></div>
 
 <div>
     <table class="table table-hover topicTable">
@@ -66,9 +66,10 @@
       <th:block th:each="topic: ${allTopic}">
             <tr>
                 <td th:text="${topic.getName()}"></td>
-                <td id="status" th:text="${topic.getStatus()}"></td>
-                <td><a th:href="@{/choosetopic(topicid=(${topic.topicid}))}"><button  class="btn btn-primary">Részletek</button></a></td>
-                <td><a th:href="@{/updatetopic(topicid=(${topic.topicid}))}"><button class="btn btn-info">Módosítás</button></a></td>
+                <td th:if="${topic.getStatus() == 'választható'}" class="successColor" th:text="${topic.getStatus()}"></td>
+                <td th:unless="${topic.getStatus() == 'választható'}" class="warnColor" th:text="${topic.getStatus()}"></td>
+                <td><a th:href="@{/consultant/choosetopic(topicid=(${topic.topicid}))}"><button  class="btn btn-primary">Részletek</button></a></td>
+                <td><a th:href="@{/consultant/updatetopic(topicid=(${topic.topicid}))}"><button class="btn btn-info">Módosítás</button></a></td>
                 <td>
                     <form th:action="@{/deletetopic}" method="post">
                         <input name="topicid" type="hidden" th:value="${topic.topicid}">
