--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,8 +25,8 @@
         <h3 class="welcomeText">Nyilvántartó és menedzselő rendszer</h3></br>
 
         <div id="indexBtn">
-            <a class="btn btn-success btn-block" th:href="@{/login}" href="/login">Bejelentkezés</a>
-            <a class="btn btn-primary btn-block" href="#">Regisztráció</a>
+            <a class="btn btn-success btn-block" th:href="@{/login}">Bejelentkezés</a>
+            <a class="btn btn-primary btn-block" th:href="@{/registration}">Regisztráció</a>
             <a class="btn btn-info btn-block" th:href="@{/informations}">Információk</a>
             <div id="successLogOut" th:if="${param.logout}">
                 <p>
