--- a/src/main/resources/templates/student/home.html
+++ b/src/main/resources/templates/student/home.html
@@ -1,10 +1,156 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security" xmlns:tdth="http://www.w3.org/1999/html">
+
 <head>
-    <meta charset="UTF-8">
-    <title>HI student</title>
+    <title>Hallgatói oldal</title>
+    <meta charset="utf-8" />
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
+    <!--<link th:href="@{/static/css/bootstrap.css}" rel="stylesheet" type="text/css" />
+    <script th:src="@{/static/js/jquery.js}"></script>
+    <script th:src="@{/static/js/popper.js}"></script>
+    <script th:src="@{/static/js/bootstrap.js}"></script>
+    <script th:src="@{/js/test.js}"></script>-->
+
+    <link rel="stylesheet"
+          href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link th:href="@{/css/base.css}" rel="stylesheet" type="text/css" />
+    <link th:href="@{/css/home.css}" rel="stylesheet" type="text/css" />
+    <script th:src="@{/js/basic.js}" type="text/javascript"></script>
 </head>
 <body>
+<div>
+    <nav class="navbar navbar-expand-sm navbar-dark">
+        <div class="container-fluid">
+            <a th:href="@{/home}" class="navbar-brand font-weight-bolder"><strong>THESISMGR: </strong><span id="neptun" sec:authentication="principal.username"></span></a>
+            <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link" th:href="@{/home}">Felvett témám</a></li>
+                <li class="nav-item"><a class="nav-link" th:href="@{/student/select}">Kiírt témák</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Link</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li class="dropdown"><a class=" btn dropdown-toggle nav-link" id="dropdown" data-toggle="dropdown">Személyes</a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="#">Adatok</a>
+                        <a class="dropdown-item" th:href="@{/logout}" href="/logout">Kijelentkezés</a>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </nav>
+</div>
+<!--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
+<hr>
+<div class="d-flex justify-content-center">
+    <h3>Felvett témám adatai</h3>
+</div>
 
+
+<div class="d-flex justify-content-center message" th:text="${updateMsg == true} ? 'Sikeres témaleadás': ''"></div>
+<div th:if="${nullMsg == false}">
+    <table class="table table-hover topicTable">
+        <thead>
+        <tr>
+            <th>Téma címe</th>
+            <th>Státusz</th>
+            <th></th>
+        </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td th:text="${topic.getName()}"></td>
+                <td th:if="${topic.getStatus() == 'választható'}" class="successColor" th:text="${topic.getStatus()}"></td>
+                <td th:unless="${topic.getStatus() == 'választható'}" class="warnColor" th:text="${topic.getStatus()}"></td>
+                <td>
+                    <form th:action="@{/describe}" method="post">
+                        <input name="topicid" type="hidden" th:value="${topic.topicid}">
+                        <button  class="btn btn-danger topicButton" type="submit" onclick="return confirm('Biztosan le szeretnéd adni a témát?')">Leadás</button>
+                    </form>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+    <div id="topicdesc" class="topicDescription" th:text="${topic.description}"></div>
+
+    <!-----------------------------------------------------------------STEPS----------------------------------------------------------------------------------------------------------------------------------->
+    <hr>
+    <div class="d-flex justify-content-center ">
+        <h3>Akcióterv</h3>
+    </div>
+
+    <div class="container">
+        <!-- Trigger the modal with a button -->
+        <div class="newStep">
+            <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#newStep">Új lépés+</button>
+        </div>
+        <!-- Modal -->
+        <div class="modal fade" id="newStep" role="dialog">
+            <div class="modal-dialog">
+
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h4>Lépés adatai</h4>
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    </div>
+                    <form name="newStep" th:action="@{/student/newstep}" class="form-group" method="get">
+                        <div class="modal-body">
+                                <input type="hidden"  name="topicid" th:value="${topic.getTopicid()}" />
+                                <div class="p-2">
+                                    <label>Megnevezés</label><input class="form-control" type="text" required  name="stepname" placeholder="lépés" />
+                                </div>
+                                <div class="p-2">
+                                    <label>Rövid leírás</label><input class="form-control" type="text" required  name="stepdescription" placeholder="leírás" />
+                                </div>
+                                <div class="p-2">
+                                    <label>Határidő</label><input class="form-control" type="date" required  name="stepdeadline" />
+                                </div>
+                                <div class="p-2">
+                                    <label>%</label><input class="form-control" type="number" required min="1" max="100"  name="steppercentage" />
+                                </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="submit" class="btn btn-primary" >Hozzáadás</button>
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+    <div class="d-flex justify-content-center jumbotron planningArea">
+        <table class="table table-hover planninTable">
+            <thead>
+            <tr>
+                <th>Lépés</th>
+                <th>Rövid leírás</th>
+                <th>Státusz</th>
+                <th>%</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td>nev</td>
+                <td>leiras</td>
+                <td>statusz</td>
+                <td>10%</td>
+
+            </tr>
+            </tbody>
+        </table>
+    </div>
+
+</div>
+
+<div class="d-flex justify-content-center" th:unless="${nullMsg == false}">Még nem vettél fel témát</div>
+<!--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
 </body>
 </html>
