--- a/src/main/resources/templates/student/select.html
+++ b/src/main/resources/templates/student/select.html
@@ -4,7 +4,7 @@
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head>
-    <title>Minden Téma</title>
+    <title>Kiírt témák</title>
     <meta charset="utf-8" />
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -29,9 +29,9 @@
         <div class="container-fluid">
             <a th:href="@{/home}" class="navbar-brand font-weight-bolder"><strong>THESISMGR: </strong><span id="neptun" sec:authentication="principal.username"></span></a>
             <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" th:href="@{/home}">Témáim</a></li>
-                <li class="nav-item"><a class="nav-link" th:href="@{/consultant/alltopic}">Összes téma</a></li>
-                <li class="nav-item"><a class="nav-link" th:href="@{/consultant/createtopic}" href="/consultant/createtopic">Téma kiírás</a></li>
+                <li class="nav-item"><a class="nav-link" th:href="@{/home}">Felvett témám</a></li>
+                <li class="nav-item"><a class="nav-link" th:href="@{/student/select}">Kiírt témák</a></li>
+                <li class="nav-item"><a class="nav-link" href="*">Link</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown"><a class=" btn dropdown-toggle nav-link" id="dropdown" data-toggle="dropdown">Személyes</a>
@@ -47,9 +47,9 @@
 <!--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
 <hr>
 <div class="d-flex justify-content-center">
-    <h3>Kiírt témáim</h3>
+    <h3>Felvehető témák</h3>
 </div>
-<div class="d-flex justify-content-center message" th:text="${message}"></div>
+<div class="d-flex justify-content-center message" th:text="${updateMsg == true} ? 'Sikeres témafelvétel': ''"></div>
 
 <div>
     <table class="table table-hover topicTable">
@@ -57,6 +57,7 @@
         <tr>
             <th>Téma címe</th>
             <th>Státusz</th>
+            <span th:text="${nullTopic}"></span>
             <th></th>
         </tr>
         </thead>
@@ -66,7 +67,9 @@
                 <td th:text="${topic.getName()}"></td>
                 <td th:if="${topic.getStatus() == 'választható'}" class="successColor" th:text="${topic.getStatus()}"></td>
                 <td th:unless="${topic.getStatus() == 'választható'}" class="warnColor" th:text="${topic.getStatus()}"></td>
-                <td><a th:href="@{/consultant/choosetopicall(topicid=(${topic.topicid}))}"><button  class="btn btn-primary">Részletek</button></a></td>
+                <td><a th:href="@{/student/choosetopic(topicid=(${topic.topicid}))}"><button  class="btn btn-primary">Részletek</button></a></td>
+                <td th:if="${nullTopic == true}"><a th:href="@{/student/selected(topicid=(${topic.topicid}))}"><button  class="btn btn-success">Felvétel</button></a></td>
+                <td th:if="${nullTopic == false}"><button disabled class="btn btn-warning">Már van felvéve</button></td>
             </tr>
         </th:block>
         </tbody>
